--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -37,6 +36,7 @@
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
+    "parcel": "^2.16.3",
     "tailwindcss": "^3.4.19"
   }
 }
